# ImageProcessing

./: .gitignore  CV_XinDe.md  I_nmf_svd.m  README.md  error_cal.m  my_nmf.m
BoxFilterFinal_CUDA/: boxfilter.cu  boxfilter.h  main.cu
FT-Saliency_opencv/: CMakeLists.txt  FTSaliency.h  headers.h  main.cpp
GaussFilter_cuda/: CMakeLists.txt  gaussfilter.cu  gaussfilter.h  headers.h  main.cpp
GaussianFFT_cuda/: main.cu
GaussianProcessRegression_Python/: Model.py  datas.txt  main.py  testPython.py  utils.py
Gff_CUDA/: boxfilter.cu  boxfilter.h  guidedfilter.cu  guidedfilter.h  guidedfusion.cu  guidedfusion.h  headers.h  tworec.cu  tworec.h  twoscale.cu  twoscale.h  weightmap.cu  weightmap.h
GuidedFitlerOptimzation_CUDA/: CMakeLists.txt  GuidedFilter.cu  GuidedFilter.h  headers.h  main.cpp
GuidedFitlerOptimzation_CUDA/inc/: helper_cuda.h
HSIandBGR/: CMakeLists.txt  main.cpp
HTO_GF_matlab/: fusion.m  guided_filter.m  histFusion.m
HorizontalLine/: CMakeLists.txt  main.cpp
Image2Video/: CMakeLists.txt  main.cpp
ImageMosaic_opencv/: CMakeLists.txt  ImageMosaic.cpp  ImageMosaic.h  main.cpp
Insst_matlab/: conv2p.m  gen_x_y_cordinates.m  inv_my_rlnsw.m  inv_rlnsw.m  meyer.m  my_rlnsw.m  nsst_dec.m  nsst_rec.m  rec_from_pol.m  rlnsw.m  shearing_filters_meyer.m  test.m  windowing.m
JointBilateralFilter_opencv/: JBF.h  main.cpp
KNN_python/: Model.py  main.py
LocalGlobalSaliency_Matlab/: localglobal.m
LocalSaliency_opencv/: CMakeLists.txt  LocalSaliency.cpp  LocalSaliency.h  headers.h  main.cpp
MSRCR_cuda/: CMakeLists.txt  MSRCR.cu  MSRCR.h  headers.h  main.cpp
Markdowns/: FromRCNN2YOLO_zhihu.md  LKFlow.md  PaperReport20180414.md  RLNSW_CUDA.md  StepByStep_DL.md  TensorRT_zhihu.md  ZSL_Notes.md  高光谱论文两篇.md
MovingObjectDetection/: CMakeLists.txt  LKFlow.cpp  LKFlow.h  ViBe.cpp  ViBe.h  headers.h  main.cpp  readme.md
NNDSVD_NMF_matlab/: NNDSVD.m  NNDSVD_NMF.m
NonPhotoRendering_opencv/: CMakeLists.txt  main.cpp
ORB_Extraction_opencv/: CMakeLists.txt  main.cpp
ObjectTracking_opencv/: CMakeLists.txt  main.cpp
OneBitHyperspectrals/: main.py  model.py
PCA_Python/: main.py
PFilterFusion/: PfilterFusion.m  PfilterGfilterMSD.m  PfilterGfilterMSDinv.m  baseLayerFusion.m  baseLayerFusion.m~  detailLayerFusion.m  detailLayerFusion.m~  pfilter-matrix.cpp  pfilter.mexa64  testFusion.m  testFusion.m~  testFusionMSD.m  testPFilter.m  utils.h
PropagationFilter/: Makefile  pfilter-matrix.h  pfilter.cpp  readme.md  testPFilter.m
R-ADL-W_matlab/: my_Horizontal_Direction_Prediction.m  my_Inverse_Horizontal_Prediction.m  my_Inverse_Horizontal_Update.m  test.m
RADL-W-Fusion_matlab/: GFF.m  Horizontal_Sinc_interpolation.m  LocalGlobalSaliency.m  RADLW_Fusion.m  WeightedMap.m  WeightedMap.m~  caSaliency.m  ftSaliency.m  globalSaliency.m  localSaliency.m  myGFF.m  readme  testFusion.m  testFusion.m~
RDL-W-Sal-Fusion_opencv/: CMakeLists.txt  Fusion.cpp  Fusion.h  RDL_Wavelet.cpp  RDL_Wavelet.h  WeightedMap.cpp  headers.h  main.cpp  source20_1.tif
RDL-Wavelet_opencv/: CMakeLists.txt  RDL_Wavelet.cpp  RDL_Wavelet.h  headers.h  main.cpp
RDLW-Sal-FusionCUDA/: CMakeLists.txt  FusionSystem.cu  FusionSystem.h  GuidedFilter.cu  GuidedFilter.h  RDLWavelet.cu  RDLWavelet.h  UMLNotes.md  WeightedMap.cu  WeightedMap.h  fusionsystem_uml.puml  headers.h  main.cpp
RDLWavelet_cuda/: CMakeLists.txt  RDLWavelet.cu  RDLWavelet.h  headers.h  main.cpp  timingdatas.md
RGF_Saliency_matlab/: LocalGlobalSaliency.m  WeightedMap.m  globalSaliency.m  guidedfilter.m  localSaliency.m  rgfsaliencyFusion.m  rollingguidancefilter.m  testFusion.m
RGF_matlab/: JBF.m  JBFcolor.m  RGF.m  RGFcolor.m
RGF_opencv/: CMakeLists.txt  JBF.h  RGF.h  header.h  main.cpp
RLNSW_GFF_matlab/: GFF.m  Script.m  inv_my_rlnsw.m  irlnsw.m  myGFF.m  my_convert.m  my_rlnsw.m  store_image.m  test.m
SRD_matlab/: colorDist.m  hc.m
SaliencyDetection_OpenCV/: CMakeLists.txt  globalSaliency.h  headers.h  main.cpp
SaliencyDetection_OpenCV/LocalSaliency/: CMakeLists.txt  GOL.h  headers.h  main.cpp
TransposeCUDA/: CMakeLists.txt  main.cu
TwoScaleRec_cuda/: CMakeLists.txt  main.cpp  twoscalerec.cu  twoscalerec.h
TwoScaleSaliencyMap_matlab/: SaliencyMap.m  imageFusion.m  testFusion.m
TwoScale_cuda/: CMakeLists.txt  filter.cu  filter.h  headers.h  main.cu  twoscale.cu  twoscale.h
WeightMap_cuda_cpp/: BFilter.cu  BFilter.h  CMakeLists.txt  GFilter.cu  WMap.cu  WMap.h  headers.h  heads.h  main.cpp  main.cu  source20_2.tif  weightmap.cu  weightmap.h
WeightedMap_OpenCV/: CMakeLists.txt  GuidedFilter.cpp  GuidedFilter.h  WeightedMap.cpp  WeightedMap.h  headers.h  main.cpp
ZJF2015_matlab/: JBF.m  JBF.m~  MultiScale.m  RGF.m  RGFFusion.m  inverseRGF.m  localSal.m
backups/: armadillo-7.800.2.tar.xz
boxfilter_NPP/: CMakeLists.txt  main.cpp
boxfilter_cuda/: boxfilter.cu  main.cu
fastGuidedFilter_matlab/: FastGuidedFilter.m  boxFilter.m  subsample.m  usample.m
gauss_filters_cpp/: CMakeLists.txt  main.cpp
gauss_filters_cpp/GaussFilter_CPP/: CMakeLists.txt  a.out  main.cpp
gff_CUDA/: BFilter.cu  BFilter.h  CMakeLists.txt  GFilter.cu  GFilter.h  TwoScale.cu  TwoScale.h  WeightedMap.cu  WeightedMap.h  boxfilter.cu  boxfilter.h  gff.cu  gff.h  guidedfilter.cu  guidedfilter.h  headers.h  main.cpp
gff_OpenCV/: CMakeLists.txt  GffFusion.cpp  GffFusion.h  main.cpp  source19_1.tif  source19_2.tif
guidedFilter_cuda/: BFilter.cu  CMakeLists.txt  GFilter.cu  GFilter.h  headers.h  main.cpp
guidedFilter_matlab/: GuidedFilter.m  GuidedFilterBox.m  average.m
histEquNPP_cuda/: CMakeLists.txt  histEqu.cpp  histEqu.cu  histEqu.h  main.cpp
histEqu_opencv/: CMakeLists.txt  histst.cpp  main.cpp
histogram_cuda_cpp/: calHist.cu  calHist.h  main.cu
improved_rlnsw_matlab/: error_cal.m  inv_my_rlnsw.m  irlnsw.m  my_rlnsw.m  rlnsw.m  test.m
inmf_cuda_opencv_cpp/: CMakeLists.txt  SVD.cpp  SVD.cu  SVD.h  main.cpp  main.cu  main.cu.back  matrix.cu  matrix.cu.back  matrix.h  shell.sh
nmf_matlab/: choosing.m  (+2 more)
sobel_opencv_cpp/: CMakeLists.txt  main.cpp
svd_cuda_cpp/: CMakeLists.txt  SVD.cpp  SVD.h  main.cu
(+209 files in other folders)
